Fix doc page sidebar item text overflow style

--- a/app/javascript/booklab/reader/index.scss
+++ b/app/javascript/booklab/reader/index.scss
@@ -118,6 +118,7 @@
         li {
           padding: 8px 0;
           @extend .text-overflow;
+          display: block;
         }
         a {
           color: #555;
